cards and card grid

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         The navbar must be using the correct container class that sets the max-width at each breakpoint to be consistent with the rest of the page.
 
         Adjust the nav to be using the dark color theme instead of default in snippet. -->
+        <section class="navigation">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <nav class="navbar navbar-dark bg-dark">
           <div class="container-fluid">
@@ -29,10 +30,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Features</a>
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link active" aria-current="page" href="#">Link 1</a>
+                <a class="nav-link" href="#">Link 2</a>
+                <a class="nav-link" href="#">Link 3</a>
                 <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              </section>
                 </div>
               </div>
             </div>
@@ -124,6 +126,60 @@
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
           <h2>Section heading</h2>
 
+          <div class="card-container">
+            <div class="row">
+
+          <div class="col-sm">
+          <div class="card" style="width: 18rem;">
+            <div class=" div div-dark bg-dark text-light">
+            <img class="card-img-top" src="/abstract.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-light">Read More</a>
+              </div>
+            </div>
+            </div>
+          </div>
+
+          <div class="col-sm">
+          <div class="card" style="width: 18rem;">
+            <div class=" div div-dark bg-dark text-light">
+            <img class="card-img-top" src="/abstract.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-light">Read More</a>
+            </div>
+            </div>
+            </div>
+          </div>
+
+          <div class="col-sm">
+          <div class="card" style="width: 18rem;">
+            <div class=" div div-dark bg-dark text-light">
+            <img class="card-img-top" src="/abstract.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-light">Read More</a>
+            </div>
+            </div>
+            </div>
+          </div>
+
+          <div class="col-sm">
+          <div class="card" style="width: 18rem;">
+            <div class=" div div-dark bg-dark text-light">
+            <img class="card-img-top" src="/abstract.jpg" alt="Card image cap">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-light">Read More</a>
+              </div>
+            </div>
+            </div>
+          </div>
           <!-- Using the grid system, adjust the following so that the cards are 100% until the small breakpoint where it then divides to use 6 columns each, then again at the large breakpoint each card will span 3 columns each -->
           <!-- Add a gutter y using the value 4 -->
           <div>
