--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
 
         Adjust the nav to be using the dark color theme instead of default in snippet. -->
         <section class="navigation">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+              <h5 class="text-white h4">Collapsed content</h5>
+              <span class="text-muted">Toggleable via the navbar brand.</span>
+            </div>
+          </div>
           <nav class="navbar navbar-dark bg-dark">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">Company Branding</a>
-            
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="#">Link 1</a>
-                <a class="nav-link" href="#">Link 2</a>
-                <a class="nav-link" href="#">Link 3</a>
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            <div class="container-fluid">
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </nav>
               </section>
                 </div>
               </div>
@@ -292,9 +291,11 @@
         <!-- Use a container class that will set a max-width at each breakpoint -->
         <div>
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
+          <div class="container-fluid">
           <div class="mb-4 ms-6 me-6 pt-3">
           <h2>Pick any Bootstrap component and explore</h2>
           <p>Within the available space, choose any component from Bootstrap and showcase it here. It can be as simple or complicated as you like but must stay within the div below.</p>
+        </div>
           <div>
           </div>
             <!-- Place component here.  -->
@@ -308,7 +309,7 @@
       <!-- Use a container class that will set a max-width at each breakpoint -->
       <!-- Center align text -->
       <!-- Add padding to the top and bottom using value 3 -->
-      <div class="container py-3 text-center">
+      <div class="container-fluid py-3 text-center">
         <div class="div div-dark bg-dark text-light">
         <p class= " ms-0 me-0 mb-0 ps-8  pe-8 pt-3 pb-3">&copy; 2023 Spooky Night 2023</p>
       </div>
